--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+github-token.txt
 
 # Unit test / coverage reports
 htmlcov/
