--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ crispy_bootstrap5==0.6
 Django~=3.1.12
 django_bootstrap_modal_forms==2.2.0
 django-bootstrap5==21.3
+django-cleanup==4.0.0
 django_crispy_forms==1.14.0
 django_formtools==2.3
 python_dateutil==2.8.2
